Fixed spacing error caused by "looks good" when registering a user

--- a/public/stylesheets/users.css
+++ b/public/stylesheets/users.css
@@ -14,8 +14,8 @@ body {
 }
 
 .user-form {
-  width: 25rem;
-  height: 25rem;
+  width: 30rem;
+  height: 30rem;
 }
 
 .user-form-position {
